--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.urlshortner</groupId>
+    <groupId>com.urlshortener</groupId>
     <artifactId>CreateUrlLambda</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -20,6 +20,14 @@
             <artifactId>aws-lambda-java-core</artifactId>
             <version>1.2.1</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.amazonaws</groupId>
